--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Hello, GIT work</h2>
+    
+    <table>
+        <table border="2" width="100%">
+        <thead></thead>
+        <tbody>
+            <tr>
+                <td colspan="2">Main Header</td>
+            </tr>
+            <tr>
+                <td>Side bar for links</td>
+                <td>
+                    <iframe name="myframe" height="300" width="100%" style="background-color: blueviolet;"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">Footer</td>
+            </tr>
+        </tbody>
+        <tfoot></tfoot>
+    </table>
 </body>
 </html>
