Table Layout complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
                 <td colspan="2">Main Header</td>
             </tr>
             <tr>
-                <td>Side bar for links</td>
+                <td>
+                    <a href="./Login.html" target="myframe">Login </a>
+                    <br><br>
+                    <a href="./Registration.html" target="myframe">Registration </a>
+                </td>
                 <td>
                     <iframe name="myframe" height="300" width="100%" style="background-color: blueviolet;"></iframe>
                 </td>
