--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
                 <td colspan="2">Footer</td>
             </tr>
         </tbody>
-        <tfoot></tfoot>
+        <tfoot>
+            
+        </tfoot>
+        <br><br><br><br><br><br>
+        <h2>About java language</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae suscipit in aliquam veritatis itaque facilis aspernatur sapiente possimus maiores quaerat voluptate vitae at asperiores, odio nam assumenda eos vel doloribus.</p>
     </table>
 </body>
 </html>
